# copy

./: .gitignore  KT.md  pyproject.toml  setup.cfg
docs/: API.md  CHEATSHEET.md  README.md
oldcode/: copyindate_ed.py  nlgutls.py  proc_docs.py  similarity.py
sync_agent_source/: README.md  pyproject.toml
sync_agent_source/sync_agent/: cli.py  content_engine.py  similarity.py  sync_managers.py
sync_agent_source/tests/: test_sync.py
tests/: test_sync.py
