[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sync-agent"
version = "1.0.0"
description = "Professional segmented ODF and file sync utility"
dependencies = [
    "odfpy",
    "pyyaml",
    "python-dateutil",
    "loguru",
    "pywin32; platform_system=='Windows'",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
sync-agent = "sync_agent.cli:main"

[tool.setuptools]
packages = ["sync_agent"]
